--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 {
-    color: #333;
+    color:  #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
@@ -16,7 +16,7 @@ body
     margin: 0 auto;
 }
 
-#container h1
+#container h
 {
     font-size: 20px;
 }
