--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,3 +57,9 @@ body
     text-align: center;
     padding: 0.5em;
 }
+.red{
+    color: red;
+    font-size: 45px;
+    font-weight: bold;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
